--- a/templates/ar/qr_code.html
+++ b/templates/ar/qr_code.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "ar/base.html" %}
 
 {% block title %}Scan QR Code{% endblock %}
 {% block body_class %}qr-page{% endblock %}
