--- a/templates/ar/review_helper.html
+++ b/templates/ar/review_helper.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "ar/base.html" %}
 
 {% block title %}Copy Your Review{% endblock %}
 {% block body_class %}review-helper-page{% endblock %}
